--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!-- Version 1.10 — Edit Mode + Island Fixes + Removable Categories -->
+<!-- Version 1.9 — Default Save State -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -9,7 +9,6 @@
 <style>
 body{margin:0;padding:0;font-family:Arial,sans-serif;background:#f4f4f4;}
 h1{text-align:center;margin:10px;}
-
 .tier-container{display:flex;align-items:center;flex-wrap:wrap;margin:5px 10px;}
 .label{
     min-width:120px;
@@ -28,7 +27,6 @@ h1{text-align:center;margin:10px;}
     gap:5px;
 }
 .color-picker{width:18px;height:18px;border:2px solid #000;border-radius:50%;cursor:pointer;}
-.remove-cat{width:18px;height:18px;display:flex;align-items:center;justify-content:center;background:red;color:white;border-radius:50%;font-size:14px;cursor:pointer;}
 .tier{display:flex;flex-wrap:wrap;gap:5px;padding:10px;min-height:80px;border-radius:12px;margin:5px 0;background:#fff;box-shadow:1px 1px 6px rgba(0,0,0,.2);flex:1;cursor:pointer;}
 .unranked{display:flex;flex-wrap:wrap;gap:5px;padding:10px;min-height:80px;background:#ddd;border:2px dashed #999;margin:5px 10px 20px;border-radius:12px;}
 .img-wrapper{position:relative;width:60px;height:60px;border-radius:6px;overflow:hidden;cursor:pointer;}
@@ -36,13 +34,11 @@ h1{text-align:center;margin:10px;}
 .img-wrapper:hover img{transform:scale(1.06);}
 .img-wrapper.selected{outline:3px solid #00e0ff;outline-offset:2px;}
 .delete-btn{position:absolute;top:-6px;right:-6px;background:rgba(255,0,0,.9);color:#fff;border:0;border-radius:50%;width:20px;height:20px;line-height:20px;font-size:14px;cursor:pointer;}
-
-/* Island panel */
 #island{position:fixed;bottom:10px;left:50%;transform:translateX(-50%);background:#888;padding:10px;border-radius:12px;box-shadow:2px 2px 12px rgba(0,0,0,.4);z-index:1000;transition:width 0.3s,max-height 0.3s;overflow:hidden;width:250px;max-height:40px;display:flex;flex-direction:column;}
 #island.expanded{max-height:300px;width:400px;}
 #islandHeader{cursor:pointer;color:#fff;font-weight:bold;margin-bottom:5px;display:flex;align-items:center;gap:10px;}
-.icon-btn{width:28px;height:28px;border-radius:50%;display:flex;justify-content:center;align-items:center;background:#aaa;color:#fff;cursor:pointer;font-size:20px;transition:transform .15s;opacity:0;}
-#island.expanded .icon-btn{opacity:1;}
+.icon-btn{width:28px;height:28px;border-radius:50%;display:flex;justify-content:center;align-items:center;background:#aaa;color:#fff;cursor:pointer;font-size:20px;transition:transform .15s;}
+.icon-btn:hover{transform:scale(1.2);}
 #islandContent{display:none;flex-direction:column;margin-top:10px;}
 #island.expanded #islandContent{display:flex;}
 .island-btn{margin:3px;padding:4px 6px;border:none;border-radius:4px;background:#aaa;color:#fff;cursor:pointer;}
@@ -52,13 +48,10 @@ h1{text-align:center;margin:10px;}
 
 <h1 id="tierListTitle" contenteditable="true">My Tier List</h1>
 <input type="file" id="imageUpload" accept="image/*" multiple>
-
 <div id="tiers"></div>
-
 <h3 style="margin-left:10px;">Unranked</h3>
 <div class="unranked" id="unranked"></div>
 
-<!-- Island Panel -->
 <div id="island">
   <div id="islandHeader">
     Options
@@ -66,100 +59,69 @@ h1{text-align:center;margin:10px;}
     <div id="loadIcon" class="icon-btn material-icons" title="Load">folder_open</div>
     <div id="addCatIcon" class="icon-btn material-icons" title="Add Category">add</div>
     <div id="creditsIcon" class="icon-btn material-icons" title="Credits">info</div>
-    <div id="editModeToggle" class="icon-btn material-icons" title="Edit Mode">edit</div>
   </div>
   <div id="islandContent">
     <div id="addCategoryPanel" style="display:none;margin-top:5px;">
       <label>Category Name: <input type="text" id="newCategoryName"/></label><br>
-      <div id="bgColors"></div>
       <button id="createCategoryBtn" class="island-btn">Create Category</button>
     </div>
-
     <div id="creditsPanel" style="display:none;margin-top:5px;color:white;">
       Made by AI — GPT-5 Mini, OpenAI.
     </div>
   </div>
 </div>
 
-<!-- Crop Overlay -->
-<div id="cropOverlay" style="display:none;position:fixed;top:0;left:0;width:100%;height:100%;background:rgba(0,0,0,.7);justify-content:center;align-items:center;z-index:10000;display:flex;">
-  <div style="position:relative;background:#fff;padding:10px;border-radius:8px;display:flex;flex-direction:column;align-items:center;">
-    <img id="cropImage" style="max-width:80vw;max-height:80vh;object-fit:contain;"/>
-    <button id="cropButton" class="island-btn" style="margin-top:5px;">OK</button>
-  </div>
-</div>
-
 <input type="file" id="fileInput" accept=".json" style="display:none"/>
 
 <script>
+// ---------- DEFAULT DATA FROM JSON ----------
+const defaultData = {
+  "title": "My Tier List",
+  "tiers": [
+    { "score": 20, "name": "S", "color": "#ff0000", "imgs": [] },
+    { "score": 17, "name": "A", "color": "#ff5500", "imgs": [] },
+    { "score": 15, "name": "B", "color": "#ffff00", "imgs": [] },
+    { "score": 12, "name": "C", "color": "#00ff00", "imgs": [] },
+    { "score": 8, "name": "D", "color": "#0099ff", "imgs": [] },
+    { "score": 0, "name": "E", "color": "#555555", "imgs": [] },
+    { "score": -500, "name": "F", "color": "#333333", "imgs": [] }
+  ],
+  "unranked": []
+};
+
 // ---------- TIERS ----------
-let tierData=[20,17,15,12,8,0,-500];
-let editMode=false;
-function scoreToColor(score){if(score>=20) return "#ff0000";if(score>=17) return "#ff5500";if(score>=15) return "#ffff00";if(score>=12) return "#00ff00";if(score>=8) return "#0099ff";return "#555";}
+let selectedWrapper=null,imgCount=0;
 function createTier(score,name,color){
   let container=document.createElement("div");container.className="tier-container";
-  let label=document.createElement("div");label.className="label";label.textContent=name||score;
-  label.style.background=color||scoreToColor(score);
-
-  const colorPick=document.createElement("input"); colorPick.type="color"; colorPick.value=color||scoreToColor(score); colorPick.className="color-picker";
-  const removeBtn=document.createElement("div"); removeBtn.className="remove-cat"; removeBtn.textContent="×";
-  removeBtn.addEventListener("click",(e)=>{e.stopPropagation(); container.remove(); saveData();});
-
-  colorPick.addEventListener("click",(e)=>{
-    if(editMode){
-      let newName=prompt("Enter category name:", label.childNodes[0].textContent);
-      if(newName) label.childNodes[0].textContent=newName;
-    } else { e.stopPropagation(); }
+  let label=document.createElement("div");label.className="label";label.textContent=name||score;label.style.background=color;
+  const colorPick=document.createElement("input");colorPick.type="color";colorPick.value=color;colorPick.className="color-picker";
+  colorPick.addEventListener("click",()=>{
+    let newName=prompt("Enter category name:", label.textContent);
+    if(newName) label.childNodes[0].textContent=newName;
   });
-  colorPick.addEventListener("input",()=>{if(editMode) label.style.background=colorPick.value; saveData();});
-
+  colorPick.addEventListener("input",()=>{label.style.background=colorPick.value;saveData();});
   label.appendChild(colorPick);
-  label.appendChild(removeBtn);
-  removeBtn.style.display="none";
-  colorPick.style.display="none";
-
   let tier=document.createElement("div");tier.className="tier";tier.dataset.score=score;
   container.appendChild(label);container.appendChild(tier);document.getElementById("tiers").appendChild(container);
-
-  [label,tier].forEach(el=>{el.addEventListener("click",()=>{
-    if(!editMode && selectedWrapper){el.closest(".tier-container").querySelector(".tier").appendChild(selectedWrapper); selectedWrapper.classList.remove("selected"); selectedWrapper=null; saveData();}
-  });});
-  updateLabelDisplay(label);
-  return container;
+  [label,tier].forEach(el=>{el.addEventListener("click",()=>{if(selectedWrapper){tier.appendChild(selectedWrapper);selectedWrapper.classList.remove("selected");selectedWrapper=null;saveData();}});});
 }
-tierData.forEach(t=>createTier(t));
 
-// ---------- IMAGE SELECTION ----------
-let imgCount=0, selectedWrapper=null, cropQueue=[], cropping=false;
-function selectWrapper(wrapper){if(selectedWrapper)selectedWrapper.classList.remove("selected");selectedWrapper=wrapper;if(wrapper)wrapper.classList.add("selected");}
 function createImageWrapper(src){
   const wrap=document.createElement("div");wrap.className="img-wrapper";wrap.id="img"+(++imgCount);
   const img=document.createElement("img");img.src=src;
   const del=document.createElement("button");del.className="delete-btn";del.textContent="×";
-  del.addEventListener("click", e=>{e.stopPropagation();wrap.remove(); if(selectedWrapper===wrap) selectedWrapper=null; saveData();});
+  del.addEventListener("click",e=>{e.stopPropagation();wrap.remove();if(selectedWrapper===wrap)selectedWrapper=null;saveData();});
   wrap.appendChild(img);wrap.appendChild(del);
-  wrap.addEventListener("click",()=>{if(!editMode){if(wrap.closest(".tier") && !wrap.closest("#unranked")){document.getElementById("unranked").appendChild(wrap); saveData();}else{selectWrapper(selectedWrapper===wrap?null:wrap);}}});
+  wrap.addEventListener("click",()=>{if(wrap.closest(".tier")&&!wrap.closest("#unranked")){document.getElementById("unranked").appendChild(wrap);saveData();}else{selectedWrapper===wrap?selectedWrapper=null:selectWrapper(wrap);}});
   return wrap;
 }
 
-// ---------- IMAGE UPLOAD ----------
-function addToUnranked(src){
-  let imgObj=new Image(); imgObj.src=src;
-  imgObj.onload=()=>{
-    let w=imgObj.width,h=imgObj.height;
-    if(Math.abs(w-h)/Math.max(w,h)>0.2){ cropQueue.push(src); if(!cropping) showCrop(); }
-    else{ document.getElementById("unranked").appendChild(createImageWrapper(src)); saveData(); }
-  }
+function selectWrapper(wrapper){
+  if(selectedWrapper)selectedWrapper.classList.remove("selected");
+  selectedWrapper=wrapper;
+  if(wrapper)wrapper.classList.add("selected");
 }
-function showCrop(){if(cropQueue.length==0){cropping=false; return;} cropping=true; document.getElementById("cropOverlay").style.display="flex"; document.getElementById("cropImage").src=cropQueue.shift();}
-document.getElementById("cropButton").addEventListener("click",()=>{
-  let src=document.getElementById("cropImage").src;
-  document.getElementById("unranked").appendChild(createImageWrapper(src)); saveData();
-  document.getElementById("cropOverlay").style.display="none"; if(cropQueue.length>0) showCrop(); else cropping=false;
-});
-document.getElementById("imageUpload").addEventListener("change", e=>{Array.from(e.target.files||[]).forEach(file=>{if(!file.type.startsWith("image/")) return; const reader=new FileReader(); reader.onload=ev=>addToUnranked(ev.target.result); reader.readAsDataURL(file);});});
 
-// ---------- SAVE/LOAD ----------
 function saveData(){
   let data={title:document.getElementById("tierListTitle").innerText,tiers:[],unranked:[]};
   document.querySelectorAll(".tier-container").forEach(container=>{
@@ -167,53 +129,32 @@ function saveData(){
     data.tiers.push({score:tier.dataset.score,name:label.childNodes[0].textContent,color:label.style.background,imgs:Array.from(tier.querySelectorAll("img")).map(i=>i.src)});
   });
   data.unranked=Array.from(document.getElementById("unranked").querySelectorAll("img")).map(i=>i.src);
-  return data;
+  localStorage.setItem("tierListData",JSON.stringify(data));
 }
+
+function loadData(){
+  let saved=localStorage.getItem("tierListData");
+  let data=saved?JSON.parse(saved):defaultData;
+  document.getElementById("tierListTitle").innerText=data.title;
+  document.getElementById("tiers").innerHTML="";
+  data.tiers.forEach(t=>{createTier(t.score,t.name,t.color);t.imgs.forEach(src=>document.querySelector(`.tier[data-score="${t.score}"]`).appendChild(createImageWrapper(src)));});
+  document.getElementById("unranked").innerHTML="";
+  data.unranked.forEach(src=>document.getElementById("unranked").appendChild(createImageWrapper(src)));
+}
+
+// ---------- INIT ----------
+loadData();
+
+// ---------- SAVE/LOAD ----------
 document.getElementById("saveIcon").addEventListener("click",()=>{
-  let data=saveData(); let blob=new Blob([JSON.stringify(data)],{type:"application/json"}); let a=document.createElement("a"); a.href=URL.createObjectURL(blob); a.download="tierlist.json"; a.click();
+  let data=saveData(); let blob=new Blob([localStorage.getItem("tierListData")],{type:"application/json"});
+  let a=document.createElement("a");a.href=URL.createObjectURL(blob);a.download="tierlist.json";a.click();
 });
 document.getElementById("loadIcon").addEventListener("click",()=>document.getElementById("fileInput").click());
 document.getElementById("fileInput").addEventListener("change",e=>{
-  let file=e.target.files[0]; if(!file) return;
-  let reader=new FileReader();
-  reader.onload=ev=>{
-    let data=JSON.parse(ev.target.result);
-    document.getElementById("tierListTitle").innerText=data.title||"My Tier List";
-    document.querySelectorAll(".tier-container").forEach((container,idx)=>{
-      let tdata=data.tiers?.[idx]; if(!tdata) return;
-      let tier=container.querySelector(".tier"),label=container.querySelector(".label");
-      tier.innerHTML=""; label.childNodes[0].textContent=tdata.name||label.childNodes[0].textContent; label.style.background=tdata.color||label.style.background;
-      (tdata.imgs||[]).forEach(src=>tier.appendChild(createImageWrapper(src)));
-    });
-    document.getElementById("unranked").innerHTML="";
-    (data.unranked||[]).forEach(src=>addToUnranked(src));
-  }; reader.readAsText(file);
+  let file=e.target.files[0];if(!file)return;
+  let reader=new FileReader();reader.onload=ev=>{localStorage.setItem("tierListData",ev.target.result);loadData();};reader.readAsText(file);
 });
-
-// ---------- ISLAND PANEL ----------
-const island=document.getElementById("island");const header=document.getElementById("islandHeader");
-header.addEventListener("click",()=>island.classList.toggle("expanded"));
-document.getElementById("addCatIcon").addEventListener("click",()=>{document.getElementById("addCategoryPanel").style.display="flex"; document.getElementById("creditsPanel").style.display="none"; island.classList.add("expanded");});
-document.getElementById("creditsIcon").addEventListener("click",()=>{document.getElementById("creditsPanel").style.display="block"; document.getElementById("addCategoryPanel").style.display="none"; island.classList.add("expanded");});
-document.getElementById("createCategoryBtn").addEventListener("click",()=>{
-  const name=document.getElementById("newCategoryName").value||"New Tier";
-  createTier(Date.now(),name); document.getElementById("newCategoryName").value="";
-});
-
-// ---------- EDIT MODE TOGGLE ----------
-const editToggle=document.getElementById("editModeToggle");
-editToggle.addEventListener("click",()=>{
-  editMode=!editMode;
-  document.querySelectorAll(".label").forEach(updateLabelDisplay);
-});
-
-function updateLabelDisplay(label){
-  if(editMode){ label.querySelector(".remove-cat").style.display="flex"; label.querySelector(".color-picker").style.display="inline-block";}
-  else{ label.querySelector(".remove-cat").style.display="none"; label.querySelector(".color-picker").style.display="none";}
-}
 </script>
-
-<footer style="position:fixed;right:10px;bottom:10px;background:rgba(100,100,100,.55);color:#fff;font-size:12px;padding:4px 8px;border-radius:8px;opacity:.85;z-index:100000;">Version 1.9 — Edit Mode + Island Fixes + Removable Categories</footer>
-
 </body>
 </html>
